log
Mon 17 Apr 2023 07:10:36 PM UTC: 
 tests:  1|8
total_score: 0/70
d528389
Mon 17 Apr 2023 07:33:50 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:13: error: unused variable ‘nuevoNodo’ [-Werror=unused-variable]
   42 |   TreeNode* nuevoNodo = createTreeNode(lower_than,NULL);
      |             ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1a71094
Mon 17 Apr 2023 07:35:59 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:16: error: implicit declaration of function ‘createTreeNdoe’; did you mean ‘createTreeNode’? [-Werror=implicit-function-declaration]
   42 |   tree->root = createTreeNdoe(lower_than,NULL);
      |                ^~~~~~~~~~~~~~
      |                createTreeNode
treemap.c:42:14: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   42 |   tree->root = createTreeNdoe(lower_than,NULL);
      |              ^
cc1: all warnings being treated as errors
Compilation failed
b1cae7d
Mon 17 Apr 2023 07:38:34 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|8
total_score: 0/70
aaa1460
Mon 17 Apr 2023 07:39:03 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|8
total_score: 0/70
df77fb0
Tue 18 Apr 2023 03:00:05 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
52a765e
Tue 18 Apr 2023 03:02:39 AM UTC: 
 treemap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  4|7
total_score: 5/70
d042486
Tue 18 Apr 2023 04:03:48 AM UTC: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  4|7
total_score: 5/70
dab7b4f
Tue 18 Apr 2023 04:07:28 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|7
total_score: 5/70
184e327
Tue 18 Apr 2023 04:13:03 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:93:16: error: implicit declaration of function ‘lower_than’ [-Werror=implicit-function-declaration]
   93 |     } else if (lower_than(key,aux->pair->key) == 0) {
      |                ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1041fa5
Tue 18 Apr 2023 04:13:43 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:93:16: error: implicit declaration of function ‘lower_than_int’ [-Werror=implicit-function-declaration]
   93 |     } else if (lower_than_int(key,aux->pair->key) == 0) {
      |                ^~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
372e591
Tue 18 Apr 2023 04:14:58 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
fd87595
Tue 18 Apr 2023 04:35:08 AM UTC: 
 treemap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  11|6
total_score: 15/70
46ce6f6
Tue 18 Apr 2023 04:56:43 AM UTC: 
 treemap.c | 27 +++++++++++----------------
 1 file changed, 11 insertions(+), 16 deletions(-)
test.c: In function ‘insertTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
b23d1a0
Tue 18 Apr 2023 04:57:28 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|6
total_score: 15/70
5f1cfb8
Tue 18 Apr 2023 04:57:40 AM UTC: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
test.c: In function ‘insertTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
a85f01f
Tue 18 Apr 2023 05:01:14 AM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
test.c: In function ‘insertTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
2f18b53
Tue 18 Apr 2023 05:03:06 AM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
test.c: In function ‘insertTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
a449da2
Tue 18 Apr 2023 05:03:40 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
test.c: In function ‘insertTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c:606:1: error: expected declaration or statement at end of input
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
65fdd17
Tue 18 Apr 2023 05:03:58 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘insertTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
7f9f5c5
Tue 18 Apr 2023 05:04:13 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|6
total_score: 15/70
61257fa
Tue 18 Apr 2023 05:06:58 AM UTC: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  11|6
total_score: 15/70
43f68c3
